# dicom-tools-rs

./: Cargo.toml  README.md
core/: Cargo.toml
core/src/: data.rs  error.rs  helper.rs  lib.rs  modules.rs
core/src/modules/: frame_of_reference.rs  general_equipment.rs  general_series.rs  general_study.rs  patient.rs  sop_common.rs
